[package]
name = "ruwal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.7", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
subprocess = "0.2.8"
structopt = "0.3.25"
text_io = "0.1.9"
colored = "2.0.0"
hex = "0.4.3"